# finam-mhm

./: .gitignore  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  LICENSE.md  README.md  cov.xml  pyproject.toml  setup.cfg
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst
docs/source/api/: index.rst
examples/: 01_simple_viewer.py  02_meteo_couple.py  03_calc_aet.py  04_time_series.py  simple_viewer.py
src/finam_mhm/: __init__.py  component.py  constants.py
src/finam_mhm_module/: __init__.py  mhm.py
tests/: test_mhm.py
tests/test_files/: ref_runoff.csv
