[metadata]
name = finam_mhm_module
description = Finam mHM wrapper
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.ufz.de/FINAM/finam-mhm-module
author = FINAM Developers
author_email = finam@ufz.de
maintainer = FINAM Developers
maintainer_email = finam@ufz.de
license = LGPLv3
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
project_urls =
    Documentation = https://FINAM.pages.ufz.de/finam/
    Source = https://git.ufz.de/FINAM/finam-mhm-module
    Tracker = https://git.ufz.de/FINAM/finam-mhm-module/-/issues
    Changelog = https://git.ufz.de/FINAM/finam-mhm-module/-/blob/main/CHANGELOG.md

[options]
package_dir =
    = src
packages = find:
install_requires =
    mhm_pybind @ git+https://git.ufz.de/mhm/mhm_pybind.git
    finam @ git+https://git.ufz.de/FINAM/finam.git
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
doc =
    sphinx>=3,<4
test =
    pytest-cov>=3
